[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-gcp-pubsub"
authors = [
    {name = "WildSys", email = "hello@wildsys.io"}
]
description = "Google Pub/Sub as task manager, like Celery can do"
requires-python = ">=3.9"
keywords = ["cloud pubsub", "tasks", 'flask']
classifiers = [
    "Framework :: Flask",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "flask>=2.2,<2.3",
    "google-cloud-pubsub==2.14.1"
]
version = "0.0.1"

[project.urls]
"Homepage" = "https://github.com/wildsys/flask-gcp-pubsub"
"Bug Tracker" = "https://github.com/wildsys/flask-gcp-pubsub/issues"

[tool.poetry]
name = "flask-gcp-pubsub"
version = "0.0.1"
description = "Google Pub/Sub as task manager, like Celery can do"
license = "GPL-3.0-or-later"
authors = [
    "WildSys <hello@wildsys.io>"
]
packages = [
    {include = "flask_gcp_pubsub", from = "src/flask_gcp_pubsub"}
]

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "main"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]
